--- a/TeamPg.css
+++ b/TeamPg.css
@@ -7,7 +7,7 @@
   justify-content: center;
   gap: 50px;
   height: auto;
-  padding: 40px 0px;
+  padding: 40px 0;
   flex-wrap: wrap;
 }
 .CardProfile {
